css/style.css
/*
*/

/* Define font-faces for the Bellota font */

@font-face {
    font-family: 'Bellota';
    font-style: normal;
    font-weight: 400;
    src: url(../fonts/Bellota/Bellota-Regular.ttf);
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
@font-face {
    font-family: 'Bellota';
    font-style: bold;
    font-weight: 800;
    src: url(../fonts/Bellota/Bellota-Bold.ttf);
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* Style webpages & define grid elements */

html {
    width: 100%;
    height: 100%;
    display: table;
    margin: 0;
    padding: 0;
    font-family: 'Helvetica';
    background-image:url(../media/Mt-Roberts.jpg);
    background-size:cover;
}

body {
    width: 100%;
    min-height: 100%;
    display: grid;
    grid-template-areas: "header" "main" "footer";
    grid-template-rows: auto 1fr auto;
    margin: 0;
    padding: 0;
    background-color: rgba(71,107,107,0.75);
}

.header {
    width: 98%;
    grid-area: header;
    background-color: rgba(255,255,255,0.0);
    margin: 1% 0 1% 0;
    padding: 0;
}

.main {
    width: 90%;
    grid-area: main;
    overflow: auto;
    margin: 0 5% 0 5%;
    padding: 3% 0 3% 0;
    z-index: 2;
}

.footer {
    grid-area: footer;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 1% 0 1% 0;
    padding: 0;
    background-color: rgba(255,255,255,0.0);
}

/* Style the navigation bar */

.container-fluid {
    width: 100%;
    min-height: 100%;
    display: flex;
    align-items: center;
    margin: 0 0 0 2%;
    padding: 0;
}

.navbar-brand {
    font-family: 'Bellota';
    font-size: 3.25em;
    color: rgba(255,255,255,1.0);
    border: solid rgba(255,255,255,0.0);
    font-weight: bold;
    margin: 0;
    padding: 0;
}

.navbar-brand:hover, .navbar-brand:focus {
    outline: none;
    background-color: transparent;
    text-decoration: none;
    color: rgba(255,255,255,1.0);
}

.navbar-brand:focus {
    border: solid rgba(255,255,255,1.0);
}

.navbar-brand .bg-contrast {
    color: rgba(179,204,204,1.0);
}

.container-fluid button {
    color: rgba(255,255,255,1.0);
    font-size: 2.5em;
}

.navbar-nav {
    display: flex;
    flex-direction: row;
    justify-content: end;
    margin: 0 10% 0 auto;
    padding: 0;
    list-style: none;
}

.navbar-nav li {
    margin: 0 2em 0 2em;
}

.navbar-nav li a {
    color: rgba(255,255,255,1.0);
    font-size: 1.5em;
    text-decoration: none;
}

.navbar-nav li a:hover, .navbar-nav li a:focus {
    color: rgba(179,204,204,1.0);
    outline: none;
    background-color: transparent;
    text-decoration: underline;
}

/* Style the main content area */

.content {
    width: 90%;
    margin: 0 5% 0 5%;
}

.content-split {
    width: 65%;
    float: left;
    margin: 0 5% 0 5%;
}

.float-box {
    background-color: rgba(255,255,255,1.0);
    padding: 2% 3% 2% 3%;
    color: rgba(0,0,0,1.0);
    border-radius: 0 2em 2em 2em;
}

.split-list {
    columns: 3;
    -webkit-columns: 3;
    -moz-columns: 3;
}

.graphic {
    float: left;
    width: 20%;
    margin: 0 5% 0 0;
}

.graphic img {
    border-radius: 2em;
}

img {
    width: 100%;
    margin: 0;
    
}

iframe {
    width: 100%;
    margin: 0;
    padding: 0;
}

.frame-host {
    min-height: 100%;
}

.stretch-frame {
    min-height: 50vh;
}

/* Style the footer */

.footer .fa {
    font-size: 2.5em;
    margin: 0 2em 0 2em;
    color: rgba(255,255,255,1.0);
}

.footer .fa, .footer .fa:hover, #social-links .fa:focus {
    text-decoration: none;
}

/* Style for mobile */

@media only screen and (max-width: 768px) {
    .container-fluid {
        margin: 0 5% 0 5%;
    }

    .content-split {
        width: 90%;
        margin: 0 5% 0 5%;
    }

    .navbar-nav {
        flex-direction: column;
        justify-content: center;
        align-items: end;
        margin: 0;
    }

    .navbar-nav li {
        margin: 0;
    }
}

/* Style generic elements */

h2 {
    font-family: "Bellota";
    font-weight: bold;
    font-size: 2.5em;
    margin: 0 0 .5em 0;
    padding: 0;
}

h3 {
    font-size: 2em;
    margin: 0 0 .5em 0;
    font-weight: 200;
    color: rgba(71,107,107,1.0);
}

p {
    font-size: 1.1em;
    line-height: 1.5em;
}

